--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,4 +1,4 @@
-@media (min-width: 1200px) {  
+@media (min-width: 1150px) {  
     
     footer{
         height: 315px;
@@ -43,141 +43,48 @@
         background-color: rgb(113, 246, 235);
     } 
 }
-@media only screen and  (min-width: 1000px) and (max-width:  1199px) {
+@media (min-width: 800px) {  
     
     footer{
-        height: 315px;
+        height: 230px;
         width: 100%;
         background-color: rgb(44, 47, 50);
+        margin-top: -18px;
     }
 
-    .footer-container{
+    .footer_icon-container{
         display: grid;
         grid-template-columns: repeat(4, 0fr);
-        transform: translate(0px, 140px);
         justify-content: center;
+        column-gap: 8px;
+        margin-top: 105px;
+        cursor: pointer;
     }
 
-    .FOLLOWUS{
+    .footer_text{
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
         justify-content: center;
         align-items: center;
         align-content: center;
-        transform: translate(0px, 120px);
+        transform: translate(0px, 87px);
         color: rgba(255, 255, 255, 0.8);
         font-family: 'Raleway', sans-serif;
         font-size: 16px;
+        margin-top: 22px;
     }
 
+    .contacts__input-massage{
+        padding: 20px;
+    }
+      
+    .footer__btn{
+        background-color: rgb(141, 141, 141);
+        width: 46px;
+        height: 40px;
+    }
+    .footer__btn:hover {
+        background-color: rgb(113, 246, 235);
+    } 
 }
-@media only screen and  (min-width: 800px) and (max-width:  999px) {
-    
-    footer{
-        margin-top: 190px;
-        height: 315px;
-        width: 100%;
-        background-color: rgb(44, 47, 50);
-    }
-
-    .footer-container{
-        display: grid;
-        grid-template-columns: repeat(4, 0fr);
-        transform: translate(0px, 140px);
-        justify-content: center;
-    }
-
-    .FOLLOWUS{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        transform: translate(0px, 120px);
-        color: rgba(255, 255, 255, 0.8);
-        font-family: 'Raleway', sans-serif;
-        font-size: 16px;
-    }
-
-}
-@media only screen and  (min-width: 540px) and (max-width:  799px) {
-    
-    footer{
-        height: 315px;
-        width: 100%;
-        background-color: rgb(44, 47, 50);
-    }
-
-    .footer-container{
-        display: grid;
-        grid-template-columns: repeat(4, 0fr);
-        transform: translate(0px, 140px);
-        justify-content: center;
-    }
-
-    .FOLLOWUS{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        transform: translate(0px, 120px);
-        color: rgba(255, 255, 255, 0.8);
-        font-family: 'Raleway', sans-serif;
-        font-size: 16px;
-    }
-
-}
-@media only screen and  (min-width: 300px) and (max-width:  539px) {
-    
-    footer{
-        height: 160px;
-        width: 100%;
-        background-color: rgb(44, 47, 50);
-    }
-
-    .footer-container{
-        display: grid;
-        grid-template-columns: repeat(4, 0fr);
-        transform: translate(0px, 70px);
-        justify-content: center;
-    }
-
-    .FOLLOWUS{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        transform: translate(0px, 65px);
-        color: rgba(255, 255, 255, 0.8);
-        font-family: 'Raleway', sans-serif;
-        font-size: 16px;
-    }
-    
-.footer-img-1{
-    width: 35px;
-    height: 30px;
-} 
-
-.footer-img-2{
-    width: 35px;
-    height: 30px;
-}
-
-.footer-img-3{
-    width: 35px;
-    height: 30px;
-}
-
-.footer-img-4{
-    width: 35px;
-    height: 30px;
-}
-
-}
-
