--- a/src/css/header.css
+++ b/src/css/header.css
@@ -149,3 +149,77 @@
         background-color: rgb(118, 244, 234);
     }
 }
+@media (min-width: 500px) { 
+    header {
+        width: 100%;
+        height: 805px;
+    }
+    .header__logo{
+        position: relative;
+        width: 113px;
+        margin-top: 64px;
+        margin-left: 65px;
+    }
+
+    .header__text{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 192px;
+        color: rgb(80, 80, 80);
+        text-align: center;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-family: "Montserrat";
+        line-height: 1.25em;
+        letter-spacing: 2px;
+        font-size: 30px;
+        text-shadow: 0px 9px 10px rgba(0, 0, 0, 0.24);
+    }
+    
+    .header__btn-wrapper{
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: center;
+    }
+      
+    .header__btn{       
+        width: 325px;
+        height: 80px;
+        border: 2px groove black;
+        margin-top: 100px;
+        cursor: pointer;
+    }
+      
+    .header__btn-text {
+        font-size: 24px;
+        font-family: 'Montserrat', sans-serif;
+        color: rgba(0, 0, 0, 0.749);
+        text-transform: uppercase;
+        padding: 27px 0px 0px 70px;
+        height: 50px;
+        display: inline-block;
+        letter-spacing: 1.7px;
+        font-weight: 700;
+    }
+      
+    .header__img{
+        height: 75px;
+        margin-right: 45px;
+        top: 70px;
+        position: relative;
+    }
+    
+    .header__img-wrapper{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+        align-items: baseline;
+        align-content: stretch;
+    }
+
+    .header__text-mark{
+        background-color: rgb(118, 244, 234);
+    }
+}
