--- a/src/css/aboutUs.css
+++ b/src/css/aboutUs.css
@@ -315,3 +315,226 @@
         transform: translate(-240px, 140px);
     }
 }
+@media (min-width: 375px) {
+    .about-us{
+        display: inline-block;
+        width: 100%;
+        height: 1200px;
+        background-color: rgb(248, 250, 250);
+    }
+      
+    .about-us__text-header{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: center;
+        align-content: stretch;
+        margin-bottom: 25px;
+    }
+
+    .about-us__main-content{
+        display: grid;
+        justify-content: center;
+    }
+      
+    .about-us__image{
+        position: relative;
+        width: 370px;
+    }
+
+    .about-us__text-merriweather{
+        color: rgba(0, 0, 0, 0.62);
+        text-transform: uppercase;
+        font-weight: bold;
+        font-family: 'Merriweather', serif;
+        font-size: 17px;
+        letter-spacing: 1px;
+        margin-bottom: 22px;
+        text-align: center;
+    }  
+    
+    .text-font-merriweather-little{
+        color: rgba(0, 0, 0, 0.62);
+        text-transform: uppercase;
+        font-weight: bold;
+        font-family: 'Merriweather', serif;
+        font-size: 17px;
+        letter-spacing: 1px;
+    }
+      
+    .about-us__text-montserrat{
+        letter-spacing: 1.5px;
+        color: rgba(0, 0, 0, 0.902);
+        font-weight: bold;
+        text-transform: uppercase;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 38px;
+        margin-top: 65px;
+        margin-bottom: 12px;
+    }
+
+    .top-right-text-header{
+        margin-top: 25px;
+        margin-bottom: 18px;
+        font-size: 16px;
+        text-align: center;
+        line-height: 1.3;
+        letter-spacing: 1.1px;
+        font-family: "Merriweather";
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+      
+    .top-right-text-small{
+        font-size: 13.5px;
+        font-family: 'Raleway', sans-serif;
+        color: rgba(0, 0, 0, 0.741);
+        line-height: 1.75;
+        letter-spacing: 0.1px;
+        text-align: center;
+    }
+    
+    .top-right-text-small-lvl-2{
+        line-height: 1.7;
+        letter-spacing: 0.1px;
+        font-size: 14px;
+        font-family: 'Raleway', sans-serif;
+        color: rgba(0, 0, 0, 0.741);
+        margin-top: 32px;
+        position: relative;
+        bottom: 5px;
+        text-align: center;
+    }
+
+    .why-we-are-the-great{
+        margin-top: 28px;
+        font-size: 17px;
+        line-height: 1.1;
+        letter-spacing: 1px;
+        font-family: "Merriweather";
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-bottom: 16px;
+        text-align: center;
+    }
+
+    .top-right-text{
+        position:relative;
+        text-align: left;
+        transform: translate(-240px, 140px);
+    }
+}
+@media (min-width: 300px) and (max-width: 374px)  {
+    .about-us{
+        display: inline-block;
+        width: 100%;
+        height: 940px;
+        background-color: rgb(248, 250, 250);
+    }
+      
+    .about-us__text-header{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: center;
+        align-content: stretch;
+        margin-bottom: 25px;
+    }
+
+    .about-us__main-content{
+        display: grid;
+        justify-content: center;
+    }
+      
+    .about-us__image{
+        position: relative;
+        width: 320px;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    .about-us__text-merriweather{
+        color: rgba(0, 0, 0, 0.62);
+        text-transform: uppercase;
+        font-weight: bold;
+        font-family: 'Merriweather', serif;
+        font-size: 17px;
+        letter-spacing: 1px;
+        margin-bottom: 22px;
+        text-align: center;
+    }  
+    
+    .text-font-merriweather-little{
+        color: rgba(0, 0, 0, 0.62);
+        text-transform: uppercase;
+        font-weight: bold;
+        font-family: 'Merriweather', serif;
+        font-size: 17px;
+        letter-spacing: 1px;
+    }
+      
+    .about-us__text-montserrat{
+        letter-spacing: 1.5px;
+        color: rgba(0, 0, 0, 0.902);
+        font-weight: bold;
+        text-transform: uppercase;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 36px;
+        margin-top: 65px;
+        margin-bottom: 12px;
+    }
+
+    .top-right-text-header{
+        margin-top: 25px;
+        margin-bottom: 18px;
+        font-size: 16px;
+        text-align: center;
+        line-height: 1.3;
+        letter-spacing: 1.1px;
+        font-family: "Merriweather";
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+      
+    .top-right-text-small{
+        font-size: 12px;
+        font-family: 'Raleway', sans-serif;
+        color: rgba(0, 0, 0, 0.741);
+        letter-spacing: 0.1px;
+        font-weight: bold;
+        text-align: center;
+    }
+    
+    .top-right-text-small-lvl-2{
+        line-height: 1.7;
+        letter-spacing: 0.1px;
+        font-size: 12px;
+        font-family: 'Raleway', sans-serif;
+        color: rgba(0, 0, 0, 0.741);
+        margin-top: 32px;
+        position: relative;
+        bottom: 5px;
+        text-align: center;
+        font-weight: bold;
+    }
+
+    .why-we-are-the-great{
+        margin-top: 28px;
+        font-size: 17px;
+        line-height: 1.1;
+        letter-spacing: 1px;
+        font-family: "Merriweather";
+        font-weight: bold;
+        text-transform: uppercase;
+        margin-bottom: 16px;
+        text-align: center;
+    }
+
+    .top-right-text{
+        position:relative;
+        text-align: left;
+        transform: translate(-240px, 140px);
+    }
+}
