--- a/src/css/header.css
+++ b/src/css/header.css
@@ -223,3 +223,77 @@
         background-color: rgb(118, 244, 234);
     }
 }
+@media (min-width: 300px) { 
+    header {
+        width: 100%;
+        height: 590px;
+    }
+    .header__logo{
+        position: relative;
+        width: 113px;
+        margin-top: 35px;
+        margin-left: 27px;
+    }
+
+    .header__text{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 70px;
+        color: rgb(80, 80, 80);
+        text-align: center;
+        font-weight: bold;
+        text-transform: uppercase;
+        font-family: "Montserrat";
+        line-height: 1.25em;
+        letter-spacing: 2px;
+        font-size: 21px;
+        text-shadow: 0px 9px 10px rgb(0 0 0 / 24%);
+    }
+    
+    .header__btn-wrapper{
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        align-items: center;
+    }
+      
+    .header__btn{       
+        width: 242px;
+        height: 88px;
+        border: 2px groove black;
+        margin-top: 100px;
+        cursor: pointer;
+    }
+      
+    .header__btn-text {
+        font-size: 22px;
+        font-family: 'Montserrat', sans-serif;
+        color: rgba(0, 0, 0, 0.749);
+        text-transform: uppercase;
+        padding: 34px 0px 0px 37px;
+        height: 50px;
+        display: inline-block;
+        letter-spacing: 1.7px;
+        font-weight: 700;
+    }
+      
+    .header__img{
+        height: 65px;
+        margin-right: 20px;
+        top: 30px;
+        position: relative;
+    }
+    
+    .header__img-wrapper{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+        align-items: baseline;
+        align-content: stretch;
+    }
+
+    .header__text-mark{
+        background-color: rgb(118, 244, 234);
+    }
+}
