--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,4 +1,4 @@
-@media (min-width: 1150px) {  
+@media (min-width: 1150px) and (max-width: 1900px) {  
     
     footer{
         height: 315px;
@@ -43,7 +43,7 @@
         background-color: rgb(113, 246, 235);
     } 
 }
-@media (min-width: 800px) {  
+@media (min-width: 800px) and (max-width: 1149px) {  
     
     footer{
         height: 230px;
@@ -88,7 +88,7 @@
         background-color: rgb(113, 246, 235);
     } 
 }
-@media (min-width: 500px) {  
+@media (min-width: 500px) and (max-width: 799px) {  
     
     footer{
         height: 180px;
@@ -133,7 +133,7 @@
         background-color: rgb(113, 246, 235);
     } 
 }
-@media (min-width: 300px) {  
+@media (min-width: 300px) and (max-width: 499px)  {  
     
     footer{
         height: 180px;
