--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,7 +1,7 @@
 .flag-text{
     background: #c6f0ee;
 }
-@media (min-width: 1150px) { 
+@media (min-width: 1150px) and (max-width: 1900px)  { 
     header {
         width: 100%;
         height: 805px;
@@ -75,7 +75,7 @@
         background-color: rgb(118, 244, 234);
     }
 }
-@media (min-width: 800px) { 
+@media (min-width: 800px) and (max-width: 1149px) { 
     header {
         width: 100%;
         height: 805px;
@@ -149,7 +149,7 @@
         background-color: rgb(118, 244, 234);
     }
 }
-@media (min-width: 500px) { 
+@media (min-width: 500px) and (max-width: 799px){ 
     header {
         width: 100%;
         height: 805px;
@@ -223,7 +223,7 @@
         background-color: rgb(118, 244, 234);
     }
 }
-@media (min-width: 300px) { 
+@media (min-width: 300px) and (max-width: 499px) { 
     header {
         width: 100%;
         height: 590px;
