--- a/src/css/smallTeam.css
+++ b/src/css/smallTeam.css
@@ -1,4 +1,4 @@
-@media (min-width: 1150px) {  
+@media (min-width: 1150px) and (max-width: 1900px) {  
     .small-team{
         height: 1318px;
         text-align: center;
@@ -121,7 +121,7 @@
         left: 20px;
       }
 }
-@media (min-width: 800px) {  
+@media (min-width: 800px) and (max-width: 1149px){  
     .small-team{
         height: 1630px;
         text-align: center;
@@ -244,7 +244,7 @@
         left: 20px;
       }
 }
-@media (min-width: 500px) {  
+@media (min-width: 500px) and (max-width: 799px) {  
     .small-team{
         height: 2950px;
         text-align: center;
@@ -367,7 +367,7 @@
         left: 20px;
       }
 }
-@media (min-width: 375px) {  
+@media (min-width: 375px) and (max-width: 499px){  
     .small-team{
         height: 2950px;
         text-align: center;
